--- a/.github/workflows/operator_test_local.yaml
+++ b/.github/workflows/operator_test_local.yaml
@@ -12,6 +12,7 @@ env:
   OPP_SCRIPT_URL: "https://raw.githubusercontent.com/redhat-openshift-ecosystem/community-operators-pipeline/ci/latest/ci/scripts/opp.sh"
   OPP_SCRIPT_ENV_URL: "https://raw.githubusercontent.com/redhat-openshift-ecosystem/community-operators-pipeline/ci/latest/ci/scripts/opp-env.sh"
   OPP_SCRIPT_ENV_OPRT_URL: "https://raw.githubusercontent.com/redhat-openshift-ecosystem/community-operators-pipeline/ci/latest/ci/scripts/opp-oprt.sh"
+  OPP_SCRIPT_CLEANUP_URL: "https://raw.githubusercontent.com/redhat-openshift-ecosystem/community-operators-pipeline/ci/latest/ci/scripts/opp-disk-cleanup-on-startup.sh"
   OPP_IMAGE: "quay.io/operator_testing/operator-test-playbooks:latest"
   OPP_ANSIBLE_PULL_REPO: "https://github.com/redhat-openshift-ecosystem/operator-test-playbooks"
   OPP_ANSIBLE_PULL_BRANCH: "upstream-community"
@@ -26,21 +27,21 @@ env:
   OPP_RELEASE_INDEX_ORGANIZATION: "openshift-community-operators"
   OPP_RELEASE_INDEX_NAME: "catalog_tmp"
   OPP_MIRROR_INDEX_MULTIARCH_BASE: "registry.redhat.io/openshift4/ose-operator-registry"
-  OPP_MULTIARCH_SUPPORTED_VERSIONS: "v4.5 v4.6 v4.7 v4.8 v4.9 v4.10 v4.11 v4.12"
+  OPP_MULTIARCH_SUPPORTED_VERSIONS: "v4.5 v4.6 v4.7 v4.8 v4.9 v4.10 v4.11 v4.12 v4.13"
   OPP_MIRROR_INDEX_MULTIARCH_POSTFIX: "s"
-# IIB_INPUT_REGISTRY_USER: "12742415|community-operators-pipeline"
+#  IIB_INPUT_REGISTRY_USER: "12742415|community-operators-pipeline"
   OPP_PROD: 0
   OPP_DRY_RUN: 0
   # TODO handle config
   OPP_PACKAGEMANIFEST_DISABLED: "1"
-  KIND_VERSION: "v0.19.0"
-  KIND_KUBE_VERSION_LATEST: "v1.27.1"
+  KIND_VERSION: "v0.20.0"
+  KIND_KUBE_VERSION_LATEST: "v1.27.2"
   OPP_PRODUCTION_TYPE: "ocp"
   OPP_REVIEWERS_ENABLED: 1
   OPP_FORCE_DEPLOY_ON_K8S_OPENSHIFT_VERSION: 4.10
-  OPP_STREAM: "operators"
 #  ARTEFACT_PATH: "/tmp/operator-test" #hardcoded for now
-#  IIB_INPUT_REGISTRY_TOKEN: ${{ secrets.IIB_INPUT_REGISTRY_TOKEN }}
+
+ # IIB_INPUT_REGISTRY_TOKEN: ${{ secrets.IIB_INPUT_REGISTRY_TOKEN }}
 
 jobs:
 
@@ -58,18 +59,21 @@ jobs:
           OPP_LABELS: "${{ join(github.event.pull_request.labels.*.name, ' ') }}"
           OPP_NAME: "multi-nic-cni-operator"
         run: |
-          echo "kiwi operators/${OPP_NAME} 1.0.4/1.0.5/1.1.0/1.2.0"
+          bash <(curl -sL $OPP_SCRIPT_CLEANUP_URL)
+          echo "kiwi operators/${OPP_NAME}"
           bash <(curl -sL $OPP_SCRIPT_URL) kiwi "operators/${OPP_NAME}/1.0.4"
           bash <(curl -sL $OPP_SCRIPT_URL) kiwi "operators/${OPP_NAME}/1.0.5"
           bash <(curl -sL $OPP_SCRIPT_URL) kiwi "operators/${OPP_NAME}/1.1.0"
           bash <(curl -sL $OPP_SCRIPT_URL) kiwi "operators/${OPP_NAME}/1.2.0"
+          bash <(curl -sL $OPP_SCRIPT_URL) kiwi "operators/${OPP_NAME}/1.2.1"
+          bash <(curl -sL $OPP_SCRIPT_URL) kiwi "operators/${OPP_NAME}/1.2.2"
 
   test-lemon-openshift:
     name: "lemon / Deploy from scratch"
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        index-tag: ['v4.10-db', 'v4.11', 'v4.12', 'v4.13', 'v4.14-rc']
+        index-tag: ['v4.10-db', 'v4.11', 'v4.12', 'v4.13', 'v4.14-rc', 'v4.15-rc']
       fail-fast: false
     steps:
       - name: Checkout code
@@ -80,18 +84,22 @@ jobs:
           OPERATOR_INDEX_TAG: ${{ matrix.index-tag }}
           OPP_NAME: "multi-nic-cni-operator"
         run: |
-          echo "lemon_${OPERATOR_INDEX_TAG} operators/${OPP_NAME} 1.0.4/1.0.5/1.1.0/1.2.0"
+          bash <(curl -sL $OPP_SCRIPT_CLEANUP_URL)
+          echo "lemon_${OPERATOR_INDEX_TAG} operators/${OPP_NAME}"
           bash <(curl -sL $OPP_SCRIPT_URL) lemon_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.0.4"
           bash <(curl -sL $OPP_SCRIPT_URL) lemon_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.0.5"
           bash <(curl -sL $OPP_SCRIPT_URL) lemon_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.1.0"
           bash <(curl -sL $OPP_SCRIPT_URL) lemon_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.2.0"
+          bash <(curl -sL $OPP_SCRIPT_URL) lemon_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.2.1"
+          bash <(curl -sL $OPP_SCRIPT_URL) lemon_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.2.2"
+
 
   test-orange-openshift:
     name: "orange / Deploy o7t"
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        index-tag: ['v4.10-db', 'v4.11', 'v4.12', 'v4.13', 'v4.14-rc']
+        index-tag: ['v4.10-db', 'v4.11', 'v4.12', 'v4.13', 'v4.14-rc', 'v4.15-rc']
       fail-fast: false
     steps:
       - name: Checkout code
@@ -102,11 +110,14 @@ jobs:
           OPERATOR_INDEX_TAG: ${{ matrix.index-tag }}
           OPP_NAME: "multi-nic-cni-operator"
         run: |
-          echo "orange_${OPERATOR_INDEX_TAG} operators/${OPP_NAME} 1.0.4/1.0.5/1.1.0/1.2.0"
+          bash <(curl -sL $OPP_SCRIPT_CLEANUP_URL)
+          echo "orange_${OPERATOR_INDEX_TAG} operators/${OPP_NAME}"
           bash <(curl -sL $OPP_SCRIPT_URL) orange_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.0.4"
           bash <(curl -sL $OPP_SCRIPT_URL) orange_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.0.5"
           bash <(curl -sL $OPP_SCRIPT_URL) orange_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.1.0"
           bash <(curl -sL $OPP_SCRIPT_URL) orange_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.2.0"
+          bash <(curl -sL $OPP_SCRIPT_URL) orange_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.2.1"
+          bash <(curl -sL $OPP_SCRIPT_URL) orange_${OPERATOR_INDEX_TAG} "operators/${OPP_NAME}/1.2.2"
 
   # test-orange-openshift:
   #   name: "orange / Deploy o7t"
